<resources>
    <string name="app_name">CustomAdapter-hm421</string>
    <string name="Settings">Settings</string>
    <string name="notepad">Записная книжка. ДЗ-221</string>
    <string name="sub_22">Компоненты ViewGroup. SharedPreferences</string>
    <string name="checkboxapp">Взаимоисключающие CheckBox. ДЗ-211</string>
    <string name="sub_21">Домашнее задание к занятию 2.1. «Компоненты View. Иерархия Views»</string>
    <string name="sub_13">Домашнее задание к занятию 1.3 «Проектирование интерфейсов»</string>
    <string name="app_savebtn">Сохранить</string>
    <string name="app_inputMoney">Ввод денег</string>
    <string name="app_inputInfo">Информация об оплате</string>
    <string name="app_btnOK">OK</string>
    <string name="app_bankCardChkBx">С банковской карты</string>
    <string name="app_mobilePhoneChkBx">С мобильного телефона</string>
    <string name="app_cashAddressChkBx">Наличными по адресу</string>
    <string name="app_tost">Взаимоисключающие CheckBox-ы успешно реализованы</string>
    <string name="app_name_spiner">Spinner «Страны-города-улицы». ДЗ-212</string>
    <string name="app_btn">Показать адрес</string>
    <string name="app_onclic_spiner">onClickSpinerStart</string>
    <string name="app_onclic_calendar">onClickTaskStart</string>
    <string name="app_onclic_madapp">onClickMedapp</string>
    <string name="app_taskdate">Сроки задачи CalendarView. ДЗ-213</string>
    <string name="app_chooseStartDate">Дата-время старта задачи: </string>
    <string name="app_chooseEndDate">Дата-время окончания задач: </string>
    <string name="app_name_medapp">Система мониторинга здоровья. ДЗ-131</string>
    <string name="user_name">ФИО</string>
    <string name="user_name_edit">введите вашу фамилию,имя,отчетство</string>
    <string name="user_age">Возраст</string>
    <string name="user_age_edit">введите ваш возраст</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_press_rec">Записать показатели давления</string>
    <string name="btn_healty_rec">Записать показатели здоровья</string>
    <string name="pressure_acticity_title">ПОКАЗАТЕЛИ ДАВЛЕНИЯ</string>
    <string name="pressure_hi_label">Верхнее давление</string>
    <string name="pressure_low_label">Нижнее давление</string>
    <string name="pulse_label">Пульс</string>
    <string name="takchicardiya_label">Тахикардия</string>
    <string name="time_label">Дата и время</string>
    <string name="default_value_text">введите значение</string>
    <string name="healthy_acticity_title">ПОКАЗАТЕЛИ ЗДОРОВЬЯ</string>
    <string name="weight_label">Вес</string>
    <string name="num_run_label">Количество шагов</string>
    <string name="btn_profil">Вернуться в профиль</string>
    <string name="tost_text_data_saved">Данные записаны</string>
    <string-array name="countries">
        <item>Россия</item>
        <item>Украина</item>
        <item>Белоруссия</item>
    </string-array>
    <string-array name="r_cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Казань</item>
    </string-array>
    <string-array name="u_cities">
        <item>Киев</item>
        <item>Одесса</item>
        <item>Харьков</item>
    </string-array>
    <string-array name="b_cities">
        <item>Минск</item>
        <item>Гомель</item>
        <item>Торжок</item>
    </string-array>
</resources>
